syntax = "proto3";

option csharp_namespace = "AccountAndTransaction_Service";
import "google/api/annotations.proto";


package user;

service user{
    rpc AllUser(AllUserRequest) returns (AllUserResponse){
        option (google.api.http) = {
            get: "/v1/users"
        };
    }
    rpc GetUser(GetUserRequest) returns (GetUserResponse){
        option (google.api.http) = {
            get: "/v1/users/get/{email_or_user_name}"
        };
    }
    rpc GetUserProfileByToken(GetUserProfileByTokenRequest) returns (GetUserResponse){
        option (google.api.http) = {
            get: "/v1/users/get-token/{token}"
        };
    }
    rpc GetUserById(GetUserByIdRequest) returns (GetUserResponse){
        option (google.api.http) = {
            get: "/v1/users/get-id/{id}"
        };
    }
    rpc UpdateUser(UpdateUserRequest) returns (BaseUserResponse){
        option (google.api.http) = {
            put: "/v1/users/update",
            body: "*"
        };
    }
    rpc DeleteUser(DeleteUserRequest) returns (BaseUserResponse){
        option (google.api.http) = {
            delete: "/v1/users/delete/{id}"
        };
    }
    rpc CreateUser(CreateUserRequest) returns (BaseUserResponse){
        option (google.api.http) = {
            post: "/v1/users/create",
            body: "*"
        };
    }
    rpc ChangeRoleUser(ChangeRoleRequest) returns (BaseUserResponse){
        option (google.api.http) = {
            put: "/v1/users/update-role",
            body: "*"
        };
    }
    rpc AddRoleUser(AddRoleRequest) returns (BaseUserResponse){
        option (google.api.http) = {
            post: "/v1/users/add-role",
            body: "*"
        };
    }
    rpc ChangeStatusUser(IdRequest) returns (BaseUserResponse){
        option (google.api.http) = {
            put: "/v1/users/update-status/{id}"
        };
    }
    rpc ChangeEmailConfirmUser(IdRequest) returns (BaseUserResponse){
        option (google.api.http) = {
            put: "/v1/users/update-emailConfirm/{id}"
        };
    }
}
message AllUserRequest{
}
message GetUserByIdRequest{
    string id = 1;
}
message GetUserRequest{
    string email_or_user_name = 1;
}
message GetUserProfileByTokenRequest{
    string token = 1;
}
message CreateUserRequest{
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
    int32 gender = 5;
    string phone = 6;
    string address = 7;
    string role = 8;
}
message UpdateUserRequest{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string user_name = 5;
    string date_of_birth = 6;
    int32 gender = 7;
    string phone = 8;
    string address = 9;
}
message DeleteUserRequest{
    string id = 1;
}
message IdRequest{
    string id = 1;
}
message ChangeRoleRequest{
    string id = 1;
    string old_role = 2;
    string new_role = 3;
}
message AddRoleRequest{
    string id = 1;
    string role = 2;
}


message AllUserResponse{
    int32 status_code = 1;
    string message = 2;
    repeated Users users = 3;
}
message GetUserResponse{
    int32 status_code = 1;
    string message = 2;
    User user = 3;
}
message BaseUserResponse{
    int32 status_code = 1;
    string message = 2;
}


message Users {
    string id = 1;
    string email = 2;
    string user_name = 3;
    string first_name = 4;
    string last_name = 5;
    string date_of_birth = 6;
    string gender = 7;
    string phone = 8;
    string address = 9;
    string status = 10;
    string email_comfirm = 11;
    int32 access_failed_count = 12;
    string role = 13;
}
message User{
    string id = 1;
    string email = 2;
    string user_name = 3;
    string first_name = 4;
    string last_name = 5;
    string date_of_birth = 6;
    string gender = 7;
    string phone = 8;
    string address = 9;
    string role = 10;
}

